--- a/style.css
+++ b/style.css
@@ -141,3 +141,32 @@ body {
     font-size: 14px;
     color:var(--cinza-secundario);
 }
+
+@media screen and (max-width: 768px) {
+    .container {
+        display:block;
+        background-image: none;
+    }
+    .container__imagem {
+        width: 50vw;
+    }
+    .container__caixa {
+        margin: 2em 2em;
+    }
+    .secundario {
+        margin:0;
+        text-align: center;
+    }
+    .secundario__imagem {
+        width: 50vw;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+    .dispositivos__lista {
+        /* flex-direction: column; */
+        display: block;
+    }
+    .rodape__lista {
+        display:block;
+    }
+}
